[package]
name = "oku-fs"
version = "0.1.0"
edition = "2021"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
description = "A distributed file system for use with the Oku browser."
readme = "README.md"
repository = "https://github.com/emmyoh/oku-fs/"
documentation = "https://emmyoh.github.io/oku-fs/oku_fs/"
license = "AGPL-3.0-or-later"
default-run = "oku-fs"

[lib]
name = "oku_fs"
path = "src/lib.rs"
# crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "oku-fs"
path = "src/cli/mod.rs"
doc = false
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.0"
cfg-if = "1.0.0"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"], optional = true }
fuse_mt = { version = "0.6.1", optional = true }
fuser = { version = "0.13.0", optional = true }
futures = "0.3.31"
iroh = { version = "0.32.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-docs = { version = "0.32.0", features = ["rpc"] }
iroh-base = "0.32.0"
iroh-blobs = "0.32.0"
iroh-gossip = "0.32.0"
libc = { version = "0.2.169", optional = true }
mainline = { version = "4.2.1", features = ["async"] }
miette = { version = "7.5.0", features = ["fancy"] }
path-clean = "1.0.1"
thiserror = "2.0.11"
tokio = "1.43.0"
env_logger = { version = "0.11.6", optional = true }
log = "0.4.25"
bs58 = "0.5.1"
anyhow = "1.0.95"
native_db = "0.8.1"
native_model = "0.4.20"
serde = "1.0.217"
toml = "0.8.20"
rayon = "1.10.0"
url = { version = "2.5.4", features = ["serde"] }
tantivy = "0.22.0"
zebra = { git = "https://github.com/emmyoh/zebra", version = "0.1.0", features = ["default_db"]}
# zebra = { path = "/home/emil/Documents/GitHub/zebra", version = "0.1.0", features = ["default_db"]}
data-encoding = "2.7.0"
hex = "0.4.3"
jiff = { version = "0.1.29", optional = true }
dashmap = "6.1.0"

[features]
default = []
fuse = ["dep:libc", "dep:fuse_mt", "dep:fuser"]
cli = ["dep:clap", "dep:env_logger", "dep:jiff"]
